testsuite/tests/typing-recmod/t11bad.compilers.reference
File "t11bad.ml", line 12, characters 15-52:
12 |        and B : sig type 'a t = <m: 'a array B.t> end
                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This recursive type is not regular.
       The type constructor B.t is defined as
         type 'a B.t
       but it is used as
         'a array B.t.
       All uses need to match the definition for the recursive type to be regular.
